--- a/index.html
+++ b/index.html
@@ -1,41 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/ResponsiveFormWithHTMLCSSANDJS
+/style.css">
     <title>Modern Login/Sing up Forms</title>
 </head>
+
 <body>
     <div class="container">
-       <div class="formBox">
-         <header>
-            <h1 id="title">Login</h1>
-        </header>
-        <form action="" >
-            <input hidden type="text" placeholder="Name" id="nameField">
-            <input type="email" placeholder="User Name Or Email">
-            <input type="password" placeholder="Password">
-            <a href="">Forgot Password ?</a>
-            <input type="button" value="Login" id="login">
-            <div class="links">
-                <a href="#">
-                    <img src="/Facebook.png" alt="">
-                </a>
-                <a href="#">
-                    <img src="/Twitter.png" alt="">
-                </a>
-                <a href="#">
-                    <img src="/Google.png" alt="">
-                </a>
-            </div>
-            <p class="signUp">
-                Not a member ? <a href="#" id="signUp">Sign Up</a>
-            </p>
-        </form>
-       </div>
+        <div class="formBox">
+            <header>
+                <h1 id="title">Login</h1>
+            </header>
+            <form action="">
+                <input hidden type="text" placeholder="Name" id="nameField">
+                <input type="email" placeholder="User Name Or Email">
+                <input type="password" placeholder="Password">
+                <a href="">Forgot Password ?</a>
+                <input type="button" value="Login" id="login">
+                <div class="links">
+                    <a href="#">
+                        <img src="/ResponsiveFormWithHTMLCSSANDJS
+/Facebook.png" alt="">
+                    </a>
+                    <a href="#">
+                        <img src="/ResponsiveFormWithHTMLCSSANDJS
+/Twitter.png" alt="">
+                    </a>
+                    <a href="#">
+                        <img src="/ResponsiveFormWithHTMLCSSANDJS
+/Google.png" alt="">
+                    </a>
+                </div>
+                <p class="signUp">
+                    Not a member ? <a href="#" id="signUp">Sign Up</a>
+                </p>
+            </form>
+        </div>
     </div>
-    <script src="/script.js"></script>
+    <script src="/ResponsiveFormWithHTMLCSSANDJS
+/script.js"></script>
 </body>
 
 </html>
