Just Added Some New Logics

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/ResponsiveFormWithHTMLCSSANDJS
-/style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>Modern Login/Sing up Forms</title>
 </head>
 
@@ -23,26 +22,22 @@
                 <input type="button" value="Login" id="login">
                 <div class="links">
                     <a href="#">
-                        <img src="/ResponsiveFormWithHTMLCSSANDJS
-/Facebook.png" alt="">
+                        <img src="/Facebook.png" alt="">
                     </a>
                     <a href="#">
-                        <img src="/ResponsiveFormWithHTMLCSSANDJS
-/Twitter.png" alt="">
+                        <img src="/Google.png" alt="">
                     </a>
                     <a href="#">
-                        <img src="/ResponsiveFormWithHTMLCSSANDJS
-/Google.png" alt="">
+                        <img src="/Twitter.png" alt="">
                     </a>
                 </div>
                 <p class="signUp">
-                    Not a member ? <a href="#" id="signUp">Sign Up</a>
+                    <span id="span">Not a member ?</span> <a href="#" id="signUp">Sign Up</a>
                 </p>
             </form>
         </div>
     </div>
-    <script src="/ResponsiveFormWithHTMLCSSANDJS
-/script.js"></script>
+    <script src="/script.js"></script>
 </body>
 
 </html>
