Added correct path

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/ResponsiveFormWithHTMLCSSANDJS
+    /style.css">
     <title>Modern Login/Sing up Forms</title>
 </head>
 
@@ -22,13 +23,13 @@
                 <input type="button" value="Login" id="login">
                 <div class="links">
                     <a href="#">
-                        <img src="/Facebook.png" alt="">
+                        <img src="/ResponsiveFormWithHTMLCSSANDJS/Facebook.png" alt="">
                     </a>
                     <a href="#">
-                        <img src="/Google.png" alt="">
+                        <img src="/ResponsiveFormWithHTMLCSSANDJS/Google.png" alt="">
                     </a>
                     <a href="#">
-                        <img src="/Twitter.png" alt="">
+                        <img src="/ResponsiveFormWithHTMLCSSANDJS/Twitter.png" alt="">
                     </a>
                 </div>
                 <p class="signUp">
@@ -37,7 +38,9 @@
             </form>
         </div>
     </div>
-    <script src="/script.js"></script>
+    <script src="/ResponsiveFormWithHTMLCSSANDJS
+    /script.js
+    "></script>
 </body>
 
 </html>
