Link script and css file with html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/ResponsiveFormWithHTMLCSSANDJS
-    /style.css">
+    <link rel="stylesheet" href="/ResponsiveFormWithHTMLCSSANDJS/style.css">
     <title>Modern Login/Sing up Forms</title>
 </head>
 
@@ -38,8 +37,7 @@
             </form>
         </div>
     </div>
-    <script src="/ResponsiveFormWithHTMLCSSANDJS
-    /script.js
+    <script src="/ResponsiveFormWithHTMLCSSANDJS/script.js
     "></script>
 </body>
 
